[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://scenes/Main.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PixelEngine.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Help.gd" type="Script" id=4]
[ext_resource path="res://scripts/MoreHelp.gd" type="Script" id=5]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]
z_index = -10
z_as_relative = false

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="StatusBox" type="CenterContainer" parent="Foreground"]
margin_right = 160.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="Foreground/StatusBox"]
margin_left = 39.0
margin_top = 64.0
margin_right = 121.0
margin_bottom = 95.0
text = "Welcome to 
TETRIS LIFE!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="CenterContainer" parent="Foreground"]
visible = false
margin_right = 160.0
margin_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stacking" type="VBoxContainer" parent="Foreground/Buttons"]
margin_left = 48.0
margin_top = 114.0
margin_right = 111.0
margin_bottom = 206.0
grow_vertical = 2

[node name="Play" type="Button" parent="Foreground/Buttons/Stacking"]
margin_right = 63.0
margin_bottom = 20.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Foreground/Buttons/Stacking"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Options"

[node name="Help" type="Button" parent="Foreground/Buttons/Stacking"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Help"

[node name="Quit" type="Button" parent="Foreground/Buttons/Stacking"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
text = "Quit"

[node name="Options" type="CenterContainer" parent="Foreground"]
anchor_left = -0.00408649
anchor_right = -0.00408649
margin_left = 0.653839
margin_right = 160.654
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stacking" type="VBoxContainer" parent="Foreground/Options"]
margin_left = 24.0
margin_top = 110.0
margin_right = 136.0
margin_bottom = 210.0

[node name="Music" type="CheckBox" parent="Foreground/Options/Stacking"]
margin_right = 112.0
margin_bottom = 24.0
pressed = true
text = "Music"

[node name="Difficulty" type="OptionButton" parent="Foreground/Options/Stacking"]
margin_top = 28.0
margin_right = 112.0
margin_bottom = 48.0
text = "Difficulty"

[node name="Experimental" type="CheckBox" parent="Foreground/Options/Stacking"]
margin_top = 52.0
margin_right = 112.0
margin_bottom = 76.0
text = "Experimental"

[node name="Done" type="Button" parent="Foreground/Options/Stacking"]
margin_top = 80.0
margin_right = 112.0
margin_bottom = 100.0
text = "Done"

[node name="Help" type="Control" parent="Foreground"]
visible = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keep It Alive" type="Label" parent="Foreground/Help"]
margin_left = 36.0671
margin_top = 5.24612
margin_right = 119.067
margin_bottom = 19.2461
text = "#KeepItAlive"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" type="ReferenceRect" parent="Foreground/Help"]
margin_left = 0.826508
margin_top = 60.493
margin_right = 160.827
margin_bottom = 80.493

[node name="Engine" parent="Foreground/Help/Wall" instance=ExtResource( 3 )]
position = Vector2( 4.03949, 1.53077 )
WIDTH = 4
HEIGHT = 4
SCALE = 4
START_EMPTY = true
ALLOW_ROTATION = false

[node name="Label" type="Label" parent="Foreground/Help/Wall"]
margin_left = 22.716
margin_top = 1.76135
margin_right = 139.716
margin_bottom = 15.7614
text = "Walls: Solid"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Plant" type="ReferenceRect" parent="Foreground/Help"]
margin_left = -0.4841
margin_top = 84.064
margin_right = 159.516
margin_bottom = 104.064
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Engine" parent="Foreground/Help/Plant" instance=ExtResource( 3 )]
position = Vector2( 4.03949, 1.53077 )
WIDTH = 4
HEIGHT = 4
SCALE = 4
START_EMPTY = true
ALLOW_ROTATION = false

[node name="Label" type="Label" parent="Foreground/Help/Plant"]
margin_left = 22.716
margin_top = 1.76135
margin_right = 139.716
margin_bottom = 15.7614
text = "Plant: Grows"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Water" type="ReferenceRect" parent="Foreground/Help"]
margin_left = 0.170654
margin_top = 108.985
margin_right = 160.171
margin_bottom = 128.985

[node name="Engine" parent="Foreground/Help/Water" instance=ExtResource( 3 )]
position = Vector2( 4.03949, 1.53077 )
WIDTH = 4
HEIGHT = 4
SCALE = 4
START_EMPTY = true
ALLOW_ROTATION = false

[node name="Label" type="Label" parent="Foreground/Help/Water"]
margin_left = 22.716
margin_top = 1.76135
margin_right = 139.716
margin_bottom = 15.7614
text = "Water: Flows"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Lava" type="ReferenceRect" parent="Foreground/Help"]
margin_left = 0.170654
margin_top = 134.562
margin_right = 160.171
margin_bottom = 154.562
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Engine" parent="Foreground/Help/Lava" instance=ExtResource( 3 )]
position = Vector2( 4.03949, 1.53077 )
WIDTH = 4
HEIGHT = 4
SCALE = 4
START_EMPTY = true
ALLOW_ROTATION = false

[node name="Label" type="Label" parent="Foreground/Help/Lava"]
margin_left = 22.716
margin_top = 1.76135
margin_right = 139.716
margin_bottom = 15.7614
text = "Lava: Hot"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Foreground/Help"]
margin_left = 6.65576
margin_top = 160.573
margin_right = 155.656
margin_bottom = 248.573
text = "To win: Let your plants 
grow to the top of the 
screen.

To lose: Kill your plants"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="Foreground/Help"]
margin_left = 53.1238
margin_top = 280.978
margin_right = 99.1238
margin_bottom = 300.978
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="More" type="Button" parent="Foreground/Help"]
margin_left = 37.4102
margin_top = 254.134
margin_right = 116.41
margin_bottom = 274.134
text = "More Help"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoreHelp" type="Control" parent="Foreground"]
visible = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Acid" type="ReferenceRect" parent="Foreground/MoreHelp"]
margin_left = 0.826508
margin_top = 60.493
margin_right = 160.827
margin_bottom = 80.493

[node name="Engine" parent="Foreground/MoreHelp/Acid" instance=ExtResource( 3 )]
position = Vector2( 4.03949, 1.53077 )
WIDTH = 4
HEIGHT = 4
SCALE = 4
START_EMPTY = true
ALLOW_ROTATION = false

[node name="Label" type="Label" parent="Foreground/MoreHelp/Acid"]
margin_left = 22.716
margin_top = 1.76135
margin_right = 139.716
margin_bottom = 15.7614
text = "Acid: MY FACE!"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Wax" type="ReferenceRect" parent="Foreground/MoreHelp"]
margin_left = -0.4841
margin_top = 84.064
margin_right = 159.516
margin_bottom = 104.064
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Engine" parent="Foreground/MoreHelp/Wax" instance=ExtResource( 3 )]
position = Vector2( 4.03949, 1.53077 )
WIDTH = 4
HEIGHT = 4
SCALE = 4
START_EMPTY = true
ALLOW_ROTATION = false

[node name="Label" type="Label" parent="Foreground/MoreHelp/Wax"]
margin_left = 22.716
margin_top = 1.76135
margin_right = 139.716
margin_bottom = 15.7614
text = "Wax: Melts"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Ice" type="ReferenceRect" parent="Foreground/MoreHelp"]
margin_left = 0.170654
margin_top = 108.985
margin_right = 160.171
margin_bottom = 128.985

[node name="Engine" parent="Foreground/MoreHelp/Ice" instance=ExtResource( 3 )]
position = Vector2( 4.03949, 1.53077 )
WIDTH = 4
HEIGHT = 4
SCALE = 4
START_EMPTY = true
ALLOW_ROTATION = false

[node name="Label" type="Label" parent="Foreground/MoreHelp/Ice"]
margin_left = 22.716
margin_top = 1.76135
margin_right = 139.716
margin_bottom = 15.7614
text = "Ice: Also melts. Duh."
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Foreground/MoreHelp"]
margin_left = 6.0
margin_top = 175.0
margin_right = 155.0
margin_bottom = 263.0
text = "Turn on Experimental
mode in Options

What's the worst that 
could happen?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Done" type="Button" parent="Foreground/MoreHelp"]
margin_left = 53.1238
margin_top = 277.704
margin_right = 99.1238
margin_bottom = 297.704
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Foreground/Buttons/Stacking/Play" to="." method="_on_play"]
[connection signal="pressed" from="Foreground/Buttons/Stacking/Options" to="." method="_on_options"]
[connection signal="pressed" from="Foreground/Buttons/Stacking/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Foreground/Buttons/Stacking/Quit" to="." method="_on_quit"]
[connection signal="toggled" from="Foreground/Options/Stacking/Music" to="." method="_on_Music_toggled"]
[connection signal="item_selected" from="Foreground/Options/Stacking/Difficulty" to="." method="_on_Difficulty_item_selected"]
[connection signal="toggled" from="Foreground/Options/Stacking/Experimental" to="." method="_on_Experimental_toggled"]
[connection signal="pressed" from="Foreground/Options/Stacking/Done" to="." method="_on_done"]
[connection signal="pressed" from="Foreground/Help/Done" to="." method="_on_done"]
[connection signal="pressed" from="Foreground/Help/More" to="." method="_on_more_help"]
[connection signal="pressed" from="Foreground/MoreHelp/Done" to="." method="_on_done"]
